# sped-parser-br

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FISCALIA_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LIBRARY_GUIDE.md  LICENSE  README.md  pyproject.toml  test_critical_fixes.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
arquivos_teste/: efd-contribuicoes.txt
examples/: basic_usage.py
src/sped_parser/: __init__.py  base.py  contribuicoes.py  ecd.py  fiscal.py  schemas.py
src/sped_parser/constants/: __init__.py  cst.py  indicators.py  layouts.py  uf.py
src/sped_parser_br/: __init__.py  base.py  contribuicoes.py  ecd.py  exceptions.py  fiscal.py  schemas.py
src/sped_parser_br/constants/: cfop.py  layouts.py
tests/: test_integration.py
tests/fixtures/: README.md
