[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sped-parser-br"
version = "0.1.0"
description = "Python library for parsing Brazilian SPED files (EFD Contribuições, EFD Fiscal, ECD)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Fiscalia Team", email = "ubaldino@fiscalia.app"}
]
keywords = ["sped", "efd", "ecd", "brazil", "tax", "fiscal", "contribuicoes", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/umeirelles/sped-parser-br"
Documentation = "https://github.com/umeirelles/sped-parser-br#readme"
Repository = "https://github.com/umeirelles/sped-parser-br"
Issues = "https://github.com/umeirelles/sped-parser-br/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sped_parser_br"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
